CppEditor: Fix following signals/slots in old-style connects

... if the first argument is a call to a function returning a pointer to
QObject.

Fixes: QTCREATORBUG-13265
Change-Id: I12c2d07331a0c6dca56ad55c518240fd74be3dca
Reviewed-by: Christian Stenger <christian.stenger@qt.io>