src/plugins/cppeditor/cppeditorplugin.h
@@ -85,6 +85,7 @@ private slots:
 
     void test_FollowSymbolUnderCursor_QObject_connect_data();
     void test_FollowSymbolUnderCursor_QObject_connect();
+    void test_FollowSymbolUnderCursor_QObject_oldStyleConnect();
 
     void test_FollowSymbolUnderCursor_classOperator_onOperatorToken_data();
     void test_FollowSymbolUnderCursor_classOperator_onOperatorToken();
